# quixote

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  API_EXAMPLES.md  Cargo.toml  Containerfile  LICENSE  README.md  build.rs  docker-compose.yaml
.github/workflows/: ci.yaml  deploy-docs.yml  pkg_push.yaml  release.yaml
.sqlx/: query-05067f823b93f335e0e5ef3c953aab0f1e9925152a9dc50a1c05e4b35988a23e.json  query-08ac39283505d7f7e171c4fbb86c526ef7acb8d1e140f99aa93b8474cc29a788.json  query-0c4d6dd0b6edea647a14a51d8e0697f908e8c9c5c6b76eb80653bf89396af9b8.json  query-136cba5ded20e26779ffa8945da080177b5152480c818066ecd6047343652e8e.json  query-3b1ea7fbd407ed5d116d40564bc1b964022082c63ceb3cd7d124f274e3bc611f.json  query-4cf740feceecaaa2bb1d60bfbdb11f6f2e61a9d4f120eed499c0bb20476d3e6e.json  query-4f91e0356313ac039cae996d75d76aa7a3c1dabf7867349adaf2cc270b1dec62.json  query-57b479c3ad6267dc15bac5e760af30b793646d2404ee7f6b4b5a20ec7a95450f.json  query-8ebcbc60059f25a3cec80b0356718f9500c7a7008dbdd40e7be8a33336fa58f1.json  query-b0922a34af154812b051b863677d1488b3415c365e6b9cf96b5c4eadf0d8d87d.json  query-dbf468679e62f680f4a90dcba0b49112fac3d3104ef3f8201a5035e2436c77fd.json  query-f6040eceb8c955868750ba20839d303543c86d1fd82b01f2841ef39b92a49bb4.json
abi/: mony.json
docs/quixote/: README.md  package-lock.json  package.json  vocs.config.ts
docs/quixote/docs/: styles.css
docs/quixote/docs/pages/: api.mdx  config-file.mdx  data-integrity.mdx  database-schema.mdx  database.mdx  development.mdx  examples.mdx  frontend.mdx  get-started.mdx  index.mdx
frontend/: README.md  app_streamlit.py  generic_dashboard.py  requirements.txt
frontend/templates/: dashboard.html
migrations/: 20260116083154_init_db_schema.sql
monitoring/prometheus/: prometheus-config.yml
script/: init_postgresql.bash  install.bash
src/: abi_parser.rs  api_graphql.rs  api_graphql_aave.rs  api_rest.rs  api_the_graph.rs  cli.rs  collector_seed.rs  configuration.rs  event_collector.rs  event_collector_runner.rs  event_processor.rs  indexing_app.rs  lib.rs  main.rs  metrics.rs  storage_duckdb.rs  storage_query.rs  streamlit_wrapper.rs  telemetry.rs  test_utils.rs  tor_service.rs
src/storage/: storage.rs  storage_api.rs  storage_duckdb.rs  storage_postgresql.rs  storage_query.rs
tests/: aave_governance_integration.rs  tor_integration.rs
