[package]
name = "etherduck"
version = "0.1.0"
edition = "2024"
description = "Rust-based indexing tool that indexes EVM events"
repository = "https://github.com/bilinearlabs/etherduck"
homepage = "https://www.bilinearlabs.io"
readme = "README.md"
keywords = ["evm", "indexing", "events", "ethereum"]

[dependencies]
alloy = { version = "1.1.0", features = ["rpc-types", "json", "rpc-client", "json-rpc"] }
anyhow = "1.0.100"
axum = "0.7"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
duckdb = { version = "1.4.2", features = ["bundled"] }
futures = "0.3.31"
regex = "1.12.2"
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time", "tracing", "signal"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
