[package]
name = "quixote"
version = "0.1.0"
edition = "2024"
description = "Rust-based indexing tool that indexes EVM events"
repository = "https://github.com/bilinearlabs/quixote"
homepage = "https://www.bilinearlabs.io"
readme = "README.md"
keywords = ["evm", "indexing", "events", "ethereum"]

[dependencies]
alloy = { version = "1.2.1", features = ["rpc-types", "json", "rpc-client", "json-rpc"] }
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["default", "http2"] }
hex = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
duckdb = { version = "1.4.2" }
futures = "0.3.31"
regex = "1.12.2"
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time", "tracing", "signal"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
rstest = "0.26.1"
pretty_assertions = "1.4.1"
